AC_CONFIG_MACRO_DIR([m4])
AC_PREREQ(2.59)
AC_INIT(avr-vala, 0.1.0, andre@masella.name)
AM_INIT_AUTOMAKE
AC_CONFIG_HEADER([config.h])
AM_MAINTAINER_MODE

AM_INIT_AUTOMAKE([foreign])
m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])

AC_PROG_CC
AM_DISABLE_STATIC
AC_PROG_LIBTOOL
AC_PATH_PROG(VALAC, valac, valac)
AC_SUBST(VALAC)

AC_SUBST(VALAFLAGS)
AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)

GLIB_REQUIRED=2.16.0
PKG_CHECK_MODULES(GLIB, glib-2.0 >= $GLIB_REQUIRED gobject-2.0 >= $GLIB_REQUIRED)
AC_SUBST(GLIB_CFLAGS)
AC_SUBST(GLIB_LIBS)

PKG_CHECK_MODULES(LIBVALA, libvala-0.16 >= 0.14.0)
VALA_VER=0.16
AC_SUBST(VALA_VER)
AC_SUBST(LIBVALA_CFLAGS)
AC_SUBST(LIBVALA_LIBS)

AC_CONFIG_FILES([
	Makefile
])
AC_OUTPUT
